# susi

./: .gitignore  Cargo.toml  README.md  deploy.sh  docker-compose.staging.yml  docker-compose.yml
cpp/: CMakeLists.txt  conanfile.py  susi.cpp
cpp/include/: susi.h
cpp/src/: susi.cpp
crates/susi_admin/: Cargo.toml
crates/susi_admin/src/: main.rs
crates/susi_client/: Cargo.toml
crates/susi_client/src/: lib.rs
crates/susi_core/: Cargo.toml
crates/susi_core/src/: crypto.rs  db.rs  error.rs  features.rs  fingerprint.rs  lib.rs  license.rs  properties.rs  token.rs  usb.rs
crates/susi_server/: Cargo.toml
crates/susi_server/src/: contact.rs  dashboard.html  docs.html  docs.rs  email.rs  invoice_pdf.rs  main.rs  shop.html  shop.rs  website.html  website.rs
crates/susi_server/tests/: integration.rs
scripts/: sign-and-test.ps1
