[package]
name = "susi_admin"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "susi-admin"
path = "src/main.rs"

[dependencies]
susi_core = { path = "../susi_core", features = ["db"] }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
reqwest = { workspace = true }
rsa = { version = "0.9", features = ["pem"] }
pkcs8 = { version = "0.10", features = ["pem"] }
